# advice-slip-api2-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  advice-slip-api2.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  adviceslipapi2_sdk.py  adviceslipapi2_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  result.py  utility_type.py
py/entity/: advice_entity.py  search_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  ratelimit_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_advice_direct.py  test_advice_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_headers.py  prepare_method.py  result_body.py  result_headers.py  transform_request.py
(+423 files in other folders)
